Create resources section with three key categories

--- a/jamaa-frontend/index.html
+++ b/jamaa-frontend/index.html
@@ -45,43 +45,100 @@
             <div class="row align-items-center">
                 <div class="col-lg-6">
                     <h1>Your Mental Health Family</h1>
-                    <p class="lead">Connect with affordable, professional mental healthcare providers in a safe and supportive environment.</p>
+                    <p class="lead">Connect with compassionate therapists who understand your journey and cultural background. Get the support you deserve, in your language and on your terms.</p>
                     <div class="cta-buttons">
-                        <button class="btn btn-primary-jamaa">Find a Therapist</button>
-                        <button class="btn btn-secondary-jamaa">Join as Provider</button>
+                        <button class="btn btn-primary-jamaa">Find Your Therapist</button>
+                        <button class="btn btn-secondary-jamaa">Learn More</button>
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <img src="/images/hero.png" alt="Mental Health Support" class="img-fluid">
+                    <img src="../images/hero.png" alt="Mental Health Support" class="img-fluid hero-image">
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Features Section -->
-    <section id="features" class="features-section">
+    <!-- Resources Section -->
+    <section id="resources" class="resources-section">
         <div class="container">
-            <h2 class="section-title">How We Help</h2>
+            <h2 class="section-title">Mental Health Resources</h2>
             <div class="row">
                 <div class="col-md-4">
-                    <div class="feature-card">
-                        <i class="feature-icon resources-icon"></i>
-                        <h3>Mental Health Resources</h3>
-                        <p>Access curated articles, guides, and tools for your mental wellness journey.</p>
+                    <div class="resource-card">
+                        <div class="resource-icon">📚</div>
+                        <h3>Educational Articles</h3>
+                        <p>Access culturally relevant mental health articles and guides written by African professionals.</p>
+                        <a href="#" class="resource-link">Browse Articles</a>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="feature-card">
-                        <i class="feature-icon community-icon"></i>
-                        <h3>Community Support</h3>
-                        <p>Join our supportive community forums and share experiences safely.</p>
+                    <div class="resource-card">
+                        <div class="resource-icon">🎥</div>
+                        <h3>Video Resources</h3>
+                        <p>Watch informative videos about mental health topics, coping strategies, and wellness tips.</p>
+                        <a href="#" class="resource-link">Watch Videos</a>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="feature-card">
-                        <i class="feature-icon wellness-icon"></i>
-                        <h3>Daily Wellness</h3>
-                        <p>Get daily tips and meditation guides for mental well-being.</p>
+                    <div class="resource-card">
+                        <div class="resource-icon">📱</div>
+                        <h3>Self-Help Tools</h3>
+                        <p>Try our interactive self-assessment tools and mood tracking features.</p>
+                        <a href="#" class="resource-link">Explore Tools</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Community Section -->
+    <section id="community" class="community-section">
+        <div class="container">
+            <h2 class="section-title">Join Our Community</h2>
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="community-card">
+                        <h3>Support Forums</h3>
+                        <p>Connect with others who understand your experiences in our moderated support forums.</p>
+                        <div class="forum-preview">
+                            <div class="forum-topic">
+                                <span class="topic-tag">Anxiety</span>
+                                <h4>Coping with Work Stress</h4>
+                                <p class="topic-meta">32 participants • Active 2h ago</p>
+                            </div>
+                            <div class="forum-topic">
+                                <span class="topic-tag">Wellness</span>
+                                <h4>Daily Meditation Circle</h4>
+                                <p class="topic-meta">45 participants • Active 1h ago</p>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary-jamaa">Join Discussion</button>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="community-card">
+                        <h3>Daily Wellness Tips</h3>
+                        <div class="wellness-tip">
+                            <div class="tip-icon">🌟</div>
+                            <div class="tip-content">
+                                <h4>Tip of the Day</h4>
+                                <p>"Take 5 minutes today to practice deep breathing. Find a quiet space, close your eyes, and focus on your breath."</p>
+                            </div>
+                        </div>
+                        <div class="wellness-calendar">
+                            <h4>Upcoming Wellness Events</h4>
+                            <ul class="event-list">
+                                <li>
+                                    <span class="event-date">Jan 20</span>
+                                    <span class="event-title">Group Meditation Session</span>
+                                </li>
+                                <li>
+                                    <span class="event-date">Jan 22</span>
+                                    <span class="event-title">Stress Management Workshop</span>
+                                </li>
+                            </ul>
+                        </div>
+                        <button class="btn btn-secondary-jamaa">View All Events</button>
                     </div>
                 </div>
             </div>
