Clean up repository and add .gitignore

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Jamaa - Your Mental Health Family</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="./jamaa-frontend/css/styles.css">
+    <link rel="stylesheet" href="./frontend/css/styles.css">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -57,8 +57,8 @@
             <div class="row mt-4">
                 <div class="col-12">
                     <div class="hero-cta-container">
-                        <a href="jamaa-frontend/resources.html" class="btn btn-primary-jamaa">Find Support Now</a>
-                        <a href="jamaa-frontend/join-therapist.html" class="btn btn-secondary-jamaa">Join As Therapist</a>
+                        <a href="frontend/resources.html" class="btn btn-primary-jamaa">Find Support Now</a>
+                        <a href="frontend/join-therapist.html" class="btn btn-secondary-jamaa">Join As Therapist</a>
                     </div>
                 </div>
             </div>
@@ -392,6 +392,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./jamaa-frontend/js/main.js"></script>
+    <script src="./frontend/js/api.js"></script>
+    <script src="./frontend/js/main.js"></script>
 </body>
 </html>
